2016-11-21  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/griddedfield.py:

	The GriddedField class now offers a ``shape`` property to directly return
	the shape of the underlying data array.

	GriddedFields are now subsriptable and return the values of the stored data
	array.

	* Changes:

	Added information on GriddedField changes as they provide a significant
	improvement in usability.

2016-11-18  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:

	(HIRS4.get_mask_from_flags):

	- treat channel-specific flags for calibration failures.  Catches some
	but not all so doesn't solve the problem as far as FIDUCEO is
	concerened.

2016-11-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* Changes: Added a file to keep track of major changes between releases.

2016-11-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/common.py(calculate_precisely):

	- Add reference to old numpy bug that makes this necessary

	* typhon/datasets/dataset.py(Dataset.read):

	- Change syntax for my_pseudo_fields such that it can have
	dependencies on other fields and pseudo_fields, which are then read as
	well.

2016-11-15  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/common.py:

	(promote_maximally): Promote ndarrays to their maximal precision, i.e.
	ints to i8, floats to f8, etc.  Works for int, float, uint.  Designed
	to be used with calculate_precisely.

	(calculate_precisely): Wrapper to promote all ndarray arguments of a
	function to their maximal precision.  Useful when you are losing
	precision in your mathematical calculations and there is no
	straightforward way of preventing this by rewriting the algorithm.

2016-11-15  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read): Support either single- or
	double-argument pseudofield function

	* typhon/datasets/tovs.py:

	(TOVSCollocatedDataset): New mixin class for any collocated dataset
	involving scanlines.
